Changelog

0.5.4.a

"messi messi messi immens messi encara messi encara messi encara messi"

Create Big Cannons 0.5.4.a, with a few bug fixes and minor changes.

Fixed:
- Fixed invalid cannon propellant combinations due to spelling mistake in data pack folder name

===

0.5.4

"Now, occasionally you're going to get stuck. It's nothing to get upset about. Don't go hurling your controller at the cat, because it might throw something back, and it'll only escalate, and then, well..."
- Stephen Fry, LittleBigPlanet (2008)

Create Big Cannons 0.5.4, with more QoL features and minor fixes.
Now supports Create Fabric 0.5.1.f patch 1.

Added:
- Added ability for some base Create contraptions to load cannons*
 - Mechanical Piston, Gantry, and Rope Pulley
- Added Cannon Loader breaking features similar to Mechanical Piston
- Added block hardness compatibility with Create's Copycat blocks
- Added default autocannon rounds to search tab
- Added assembly connectivity between Cannon Mount/Cannon Carriage and unassembled cannons
- Added assembly connectivity between Yaw Controller and Cannon Mount
- Added minimum spread option to big cannon materials
- Added spread reduction option to big cannon materials
- Added tags for various Create Big Cannons munitions items
 - #createbigcannons:fuzes
 - #createbigcannons:autocannon_ammo_containers
 - #createbigcannons:autocannon_cartridges
 - #createbigcannons:autocannon_rounds
 - #createbigcannons:spent_autocannon_casings
 - #createbigcannons:big_cannon_projectiles
 - #createbigcannons:big_cannon_propellant
  - Includes:
   - #createbigcannons:big_cannon_cartridges
   - #createbigcannons:big_cannon_propellant_bags
- Added ability to place Autocannon Ammo Containers as blocks
- Added tooltip to Autocannon Ammo Container showing contained items and spacing
- Added Creative Autocannon Ammo Container, an endless source of autocannon ammo
- Added block properties compatibility with Create Copycat blocks